--- a/CommandsService/CommandsService.csproj
+++ b/CommandsService/CommandsService.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
@@ -9,5 +10,14 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12"/>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2"/>
+    <PackageReference Include="Grpc.Tools" Version="2.43.0"/>
+    <PackageReference Include="Grpc.Net.Client" Version="2.42.0"/>
+    <PackageReference Include="Google.Protobuf" Version="3.19.3"/>
   </ItemGroup>
+
+    <ItemGroup>
+    <Protobuf Include="Protos\platforms.proto" GrpcServices="Client" />
+  </ItemGroup>
+
 </Project>
