--- a/PlatformService/PlatformService.csproj
+++ b/PlatformService/PlatformService.csproj
@@ -9,5 +9,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12"/>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2"/>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.42.0"/>
   </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\platforms.proto" GrpcServices="Server" />
+  </ItemGroup>
+  
 </Project>
